<resources>
    <string name="app_name">Catch</string>
    <string name="continue_">Continue</string>
    <string name="internet_connection">Please check your internet connection!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_user_type">Select User Type</string>
    <string name="catcher">Catcher</string>
    <string name="catchee">Catchee</string>
    <string name="by_signing_up_to_our_app_you_agree_to_our">By signing up to our app, you agree to our</string>
    <string name="terms_amp_conditions">Terms &amp; Conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome!</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="to_complete_creating_your_account_you_need_to_enter_the_verification_code_we_sent_to_your_phone_number">To complete creating your account, you need to enter the verification code we sent to your phone number</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="done">Done</string>
    <string name="select_car_type">Select Car Type</string>
    <string name="taxi">Taxi</string>
    <string name="private_car">Private Car</string>
    <string name="enter_car_information">Enter Car Information</string>
    <string name="country">Country</string>
    <string name="plate_number">Plate Number</string>
    <string name="car_brand">Car Brand</string>
    <string name="car_model">Car Model</string>
    <string name="scan_the_car_id_card">Scan the car ID card</string>
    <string name="front">Front</string>
    <string name="empty_full_name">Full name can\'t be empty!</string>
    <string name="empty_phone_number">Phone number can\'t be empty!</string>
    <string name="phone_existed">Phone number is already existed!</string>
    <string name="notifications">Notifications</string>
    <string name="go_to_payment">Go to Payment</string>
    <string name="verification_completed">Verification completed!</string>
    <string name="verification_failed">Verification not completed! Try again!</string>
    <string name="code_sent">Code sent!</string>
    <string name="phone_not_existed">Phone number is not existed!</string>
    <string name="back">Back</string>
    <string name="catch_a_driver">catch a driver</string>
    <string name="empty_plate_number">Plate number can\'t be empty!</string>
    <string name="upload_front_image">Please upload car id front image!</string>
    <string name="upload_back_image">Please upload car id back image!</string>
    <string name="choose">Choose</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="finish_trip">Finish Trip</string>
    <string name="you_catch_is_done">You Catch is Done!</string>
    <string name="with_your_catchee">With your catchee</string>
    <string name="you_have_successful_reached_your_destination">You have successful reached your destination</string>
    <string name="start_trip">Start Trip</string>
    <string name="account">account?</string>
    <string name="are_you_sure_you_want_to_log_out_from_your">Are you sure you want to log out from your</string>
    <string name="yes_log_out">Yes, Log out</string>
    <string name="no_stay_in">No, Stay in</string>
    <string name="affordable_catches">Affordable Catches</string>
    <string name="luxury_catches">Luxury Catches</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="catches_history">Catches History</string>
    <string name="hi">Hi,</string>
    <string name="here_s_your_balance">Here’s Your Balance.</string>
    <string name="total_fees">Total Fees</string>
    <string name="total_catches">Total Catches</string>
    <string name="catch_details">Catch Details</string>
    <string name="catcher_name">Catcher Name:</string>
    <string name="catch_fees">Catch Fees:</string>
    <string name="catch_time_date">Catch Time &amp; Date:</string>
    <string name="you_didn_t_grab_any_catches_yet">You didn\'t grab any catches yet!</string>
    <string name="no_notifications_to_show_yet">No notifications to show yet!</string>
    <string name="white_space">Please enter your first and last name!</string>
    <string name="exit_your_account">Exit your account</string>
    <string name="are_you_sure_you_want_to_log_out_from_your_account">Are you sure you want to log out from your account?</string>
    <string name="catchee_name">Catchee Name:</string>
    <string name="your_account_is_pending_to_approve">Your account is Pending to approve</string>
    <string name="change_to_busy">Change to busy</string>
    <string name="change_to_available">Change to Available</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="are_you_sure_you_want_to_cancel_your_catch">Are you sure you want to cancel your catch</string>
    <string name="request">request?</string>
    <string name="yES_Cancel_Request">YES, Cancel Request</string>
    <string name="nO_Keep_Request">NO, Keep Request</string>
    <string name="new_Request">New Request</string>
    <string name="from">From:</string>
    <string name="would_you_like_to_accept_this_catch_request">Would you like to accept this catch request?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>


</resources>