<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_16sdp"
    app:cardElevation="0.03dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_15sdp"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_exist"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/exit_your_account"
        android:textSize="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_bold"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dec"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:textColor="@color/gray"
        android:text="@string/are_you_sure_you_want_to_log_out_from_your"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/cairo_semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_dec2"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="@string/account"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/cairo_semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/logout"
            android:visibility="visible"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/yellow"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="0.3dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_yes"
                android:layout_width="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:padding="@dimen/_8sdp"
                android:paddingStart="@dimen/_32sdp"
                android:paddingEnd="@dimen/_32sdp"
                android:textColor="@color/white"
                android:fontFamily="@font/cairo_semibold"
                android:text="@string/yes_log_out"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cancel"
            android:visibility="visible"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/red"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_16sdp"

            app:cardCornerRadius="@dimen/_20sdp"

            app:cardElevation="0.3dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_no"
                android:layout_width="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:padding="@dimen/_8sdp"
                android:paddingStart="@dimen/_32sdp"
                android:paddingEnd="@dimen/_32sdp"
                android:textColor="@color/white"
                android:text="@string/no_stay_in"
                android:fontFamily="@font/cairo_semibold"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>