<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_16sdp"
    app:cardElevation="0.03dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_15sdp"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


    <androidx.appcompat.widget.AppCompatTextView
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/you_catch_is_done"
        android:textSize="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:textColor="@color/gray"
        android:text="@string/you_have_successful_reached_your_destination"
        android:textSize="@dimen/_12sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="@string/with_your_catchee"
            android:textSize="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/gray"
                android:text="Total Fees:"
                android:textSize="@dimen/_12sdp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_weight="1"
               android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:text="2.5 JD"
                android:textSize="@dimen/_12sdp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_done"
            android:visibility="visible"
            android:layout_gravity="center"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/yellow"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_16sdp"

            app:cardCornerRadius="@dimen/_20sdp"

            app:cardElevation="0.3dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:padding="@dimen/_8sdp"
                android:paddingStart="@dimen/_32sdp"
                android:paddingEnd="@dimen/_32sdp"
                android:textColor="@color/white"
                android:text="@string/done"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>