<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.main.catchee.history.CatcheeHistoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/data_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/red_yellow_gradient">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/registration_background"
            android:scaleType="centerCrop"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/red_yellow_gradient"
            android:alpha="0.85"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/_15sdp">
            <ImageView
                android:id="@+id/navigate_back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/navigate_back"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/navigate_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/catches_history"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_17ssp"
                android:layout_marginStart="@dimen/_5sdp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/hi_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/hi"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_23ssp"
            android:layout_marginStart="@dimen/_20sdp"/>

        <TextView
            android:id="@+id/balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hi_user"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/here_s_your_balance"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:layout_marginStart="@dimen/_20sdp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/balance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_fees"
                    android:fontFamily="@font/cairo_semibold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"/>
                <TextView
                    android:id="@+id/total_fees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="JD 0.00"
                    android:fontFamily="@font/cairo_semibold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20ssp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_catches"
                    android:fontFamily="@font/cairo_semibold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"/>
                <TextView
                    android:id="@+id/total_catches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="@font/cairo_semibold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20ssp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/history_NSV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_basic_0dp"
        app:layout_constraintTop_toBottomOf="@id/data_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_RV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_basic_0dp"
            tools:listitem="@layout/history_layout"
            tools:itemCount="10"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"/>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/no_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/you_didn_t_grab_any_catches_yet"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="@dimen/_17ssp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>