<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_3sdp"
    app:cardElevation="@dimen/_3sdp">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/notification_date_time"
            android:text="@string/catch_details"
            android:fontFamily="@font/cairo_bold"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardElevation="@dimen/_3sdp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/catch_circle"
                    android:layout_margin="@dimen/_7sdp"/>
            </com.google.android.material.card.MaterialCardView>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_7sdp">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/catcher_name"
                        android:fontFamily="@font/cairo_regular"
                        android:textSize="@dimen/_8ssp"
                        android:textColor="@color/dark_gray"/>
                    <TextView
                        android:id="@+id/catcher_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="Ahmad Kamal"
                        android:fontFamily="@font/cairo_bold"
                        android:textSize="@dimen/_8ssp"
                        android:textColor="@color/black"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/catch_fees_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/catch_fees"
                        android:fontFamily="@font/cairo_regular"
                        android:textSize="@dimen/_8ssp"
                        android:textColor="@color/dark_gray"/>
                    <TextView
                        android:id="@+id/catch_fees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="2.5 JD"
                        android:fontFamily="@font/cairo_bold"
                        android:textSize="@dimen/_8ssp"
                        android:textColor="@color/black"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/catch_time_date"
                        android:fontFamily="@font/cairo_regular"
                        android:textSize="@dimen/_8ssp"
                        android:textColor="@color/dark_gray"/>
                    <TextView
                        android:id="@+id/catch_time_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="29 October 2022, 15:38"
                        android:fontFamily="@font/cairo_bold"
                        android:textSize="@dimen/_8ssp"
                        android:textColor="@color/black"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>